--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,3 +10,6 @@
 @import 'blocks/form';
 @import 'blocks/content';
 @import 'blocks/page-footer';
+@import 'blocks/photo-post';
+@import 'blocks/post-form';
+@import 'blocks/filter-block';
