--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -14,6 +14,12 @@
     font-size: 24px;
     line-height: 26px;
     font-weight: 400;
+  }
 
+  &--main {
+    min-height: 460px;
+    background:
+    url(../img/iphone-hand-mobile.png) no-repeat 0 100%,
+    url(../img/bg-back-mobile.jpg) no-repeat;
   }
 }
