--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,3 +13,8 @@
 @import 'blocks/photo-post';
 @import 'blocks/post-form';
 @import 'blocks/filter-block';
+@import 'blocks/download-block';
+@import 'blocks/features-list';
+@import 'blocks/slider';
+@import 'blocks/versions-table';
+
