--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -19,3 +19,6 @@ $form-label-color-pink: #d22856;
 $form-field-color-gray: #e5e5e5;
 
 $button-color: #2aab6d;
+
+
+$tablet-width: "(min-width: 700px)";
