--- a/sass/blocks/content-description.scss
+++ b/sass/blocks/content-description.scss
@@ -7,5 +7,23 @@
   &__text {
     padding: 40px 0 20px 0;
     text-align: center;
+
+    span {
+      display: none;
+    }
+  }
+
+  @media #{$tablet-width} {
+    &__wrapper {
+      @include content-wrapper-tablet;
+    }
+
+    &__text {
+      font-size: 18px;
+
+      span {
+        display: block;
+      }
+    }
   }
 }
