--- a/sass/blocks/content.scss
+++ b/sass/blocks/content.scss
@@ -1,12 +1,9 @@
-.wrapper {
-  width: 320px;
-  margin: 0 auto;
-  outline: 1px solid black;
-}
+
 
 .logo {
   font-size: 0;
   display: block;
+  margin: 20px 0;
   width: 90px;
   height: 20px;
   background: url(../img/logo-pink-white-mobile.svg) no-repeat;
@@ -19,19 +16,19 @@
     background: url(../img/logo-pink-blue-mobile.svg) no-repeat;
     width: 150px;
     height: 45px;
-    margin: 20px auto;
   }
 }
 
 .social-links {
-  display: block;
-  font-size: 0;
-  text-align: center;
-  padding: 10px 0;
+  width: 200px;
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 
   &__btn {
-    @include inline-block($valign: top);
     box-sizing: border-box;
+    font-size: 0;
     width: 50px;
     height: 50px;
     border: 3px solid $form-field-color-gray;
@@ -62,24 +59,18 @@
   background-color: $button-color;
   width: 100%;
   height: 63px;
-  border-radius: 5px;
-  margin: 10px 0;
+  border-radius: 2px;
 }
 
 .popup {
   font-size: 14px;
   line-height: 24px;
   text-align: center;
-  border-top: 1px solid #000;
-  border-bottom: 1px solid #000;
+  border: 1px solid #000;
+  padding: 20px 0 0 0;
 
   &__wrapper {
     padding: 0 20px;
-
-    &--gray {
-      background-color: $form-field-color-gray;
-      padding: 40px 20px;
-    }
   }
 
   &__title {
@@ -87,8 +78,46 @@
     font-weight: 700;
   }
 
-  &__description {
-    padding: 10px 0;
+  &__btn-wrapper {
+    padding: 30px 20px 50px 20px;
+  }
+
+  &--success {
+    .popup__btn-wrapper {
+      background-color: $pages-color-gray;
+      padding: 50px 20px;
+    }
+  }
+
+  @media #{$tablet-width} {
+    box-sizing: border-box;
+    width: 460px;
+    padding: 50px 0 0 0;
+    margin: 0 auto;
+
+    &__wrapper {
+      padding: 0 70px;
+    }
+
+    &__title {
+      font-size: 30px;
+      line-height: 40px;
+    }
+
+    &__description {
+      font-size: 18px;
+      padding: 10px 0;
+    }
+
+    &__btn-wrapper {
+      padding: 30px 80px 50px 80px;
+    }
+
+    &--success {
+      .popup__btn-wrapper {
+        padding: 50px 80px;
+      }
+    }
   }
 }
 
