--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -17,15 +17,19 @@
     display: block;
     text-transform: uppercase;
     color: $form-label-color-pink;
-    width: 100%;
     text-align: center;
     box-sizing: border-box;
     padding: 25px;
+    margin: 0 auto;
+
+    &--hidden {
+      display: none;
+    }
   }
 
   &__label {
     display: block;
-    padding-bottom: 0 0 0 23px;
+    padding: 0 0 0 23px;
     text-transform: uppercase;
     color: $form-label-color-pink;
   }
@@ -44,8 +48,10 @@
   &__hint {
     display: block;
     padding: 20px;
+    box-sizing: border-box;
     text-align: center;
     text-transform: uppercase;
+    width: 100%;
 
     span {
       display: none;
@@ -120,6 +126,117 @@
         overflow: hidden;
         resize: none;
         height: 200px;
+      }
+    }
+  }
+
+  @media #{$tablet-width} {
+
+    &__wrapper {
+      @include content-wrapper-tablet;
+    }
+
+    &__group-container {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__send-container {
+      display: flex;
+      align-items: baseline;
+    }
+
+    &__hint {
+      text-align: right;
+      padding: 0;
+    }
+
+    &__group-title {
+
+      &--hidden {
+        display: block;
+      }
+    }
+
+    &__group {
+      &--name-group {
+        order: 0;
+
+        .form__label {
+          padding: 0 20px 0 0;
+        }
+
+        .form__entry-field {
+          display: flex;
+          justify-content: space-between;
+          align-items: baseline;
+          margin-bottom: 30px;
+        }
+      }
+
+      &--achievements-group {
+        order: 3;
+      }
+
+      &--version-group {
+        order: 1;
+      }
+
+      &--emotions-group {
+        order: 4;
+      }
+
+      &--contact-group {
+        order: 2;
+
+        .form__entry-field {
+          display: flex;
+          flex-direction: column-reverse;
+          margin-bottom: 15px;
+        }
+
+        .form__field {
+          margin-bottom: 0;
+        }
+      }
+
+      &--border {
+        background-color: white;
+
+        .form__border-wrapper {
+          display: block;
+          position: relative;
+          border: 2px solid $pages-color-dark-gray;
+          padding: 50px 60px;
+        }
+
+        .form__group-title {
+          position: relative;
+          display: inline-block;
+          background-color: white;
+          margin: 0 auto;
+          padding: 0 20px;
+          z-index: 1;
+        }
+        .form__title-wrapper {
+          display: block;
+          text-align: center;
+          position: absolute;
+          top: -16px;
+          left: 0;
+          right: 0;
+          background-color: white;
+
+          &:after {
+            content: '';
+            display: block;
+            position: relative;
+            top: -17px;
+            height: 2px;
+            background-color: $pages-color-dark-gray;
+            z-index: 0;
+          }
+        }
       }
     }
   }
