--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -22,4 +22,17 @@
     url(../img/iphone-hand-mobile.png) no-repeat 0 100%,
     url(../img/bg-back-mobile.jpg) no-repeat;
   }
+
+  @media #{$tablet-width} {
+
+    &__wrapper {
+      @include content-wrapper-tablet;
+    }
+
+    &__text {
+      font-size: 50px;
+      line-height: 70px;
+      padding: 120px 20px 100px 20px;
+    }
+  }
 }
