--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,11 +11,11 @@
 @import 'blocks/content';
 @import 'blocks/page-footer';
 @import 'blocks/photo-post';
-@import 'blocks/post-form';
-@import 'blocks/filter-block';
+@import 'blocks/post-photo';
 @import 'blocks/download-block';
 @import 'blocks/features-list';
 @import 'blocks/slider';
 @import 'blocks/versions-table';
 @import 'blocks/wrapper';
+@import 'blocks/contacts-block';
 
