--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -21,4 +21,6 @@ $form-field-color-gray: #e5e5e5;
 $button-color: #2aab6d;
 
 
+$mobile-width-only: "(max-width: 700px)";
 $tablet-width: "(min-width: 700px)";
+$desktop-width: "(min-width: 1200px)";
