--- a/sass/blocks/download-block.scss
+++ b/sass/blocks/download-block.scss
@@ -7,4 +7,13 @@
   &__wrapper {
     padding: 0 20px;
   }
+
+  @media #{$tablet-width} {
+    background-color: transparent;
+
+    &__wrapper {
+      @include content-wrapper-tablet;
+      padding-right: 50%;
+    }
+  }
 }
