--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -17,10 +17,19 @@
   }
 
   &--main {
-    min-height: 460px;
     background:
-    url(../img/iphone-hand-mobile.png) no-repeat 0 100%,
-    url(../img/bg-back-mobile.jpg) no-repeat;
+    url(../img/iphone-hand-mobile.png) no-repeat 0 10%,
+    #000 url(../img/bg-back-mobile.jpg) no-repeat;
+  }
+
+  @media #{$mobile-width-only} {
+    &--main {
+      padding-top: 300px;
+
+      .intro__text {
+        display: none;
+      }
+    }
   }
 
   @media #{$tablet-width} {
@@ -30,9 +39,21 @@
     }
 
     &__text {
+      margin: 0;
       font-size: 50px;
-      line-height: 70px;
+      line-height: 60px;
       padding: 120px 20px 100px 20px;
+      font-weight: 400;
+    }
+
+    &--main {
+      background:
+      url(../img/iphone-hand-mobile.png) no-repeat 50% 100%,
+      #000 url(../img/bg-back-mobile.jpg) no-repeat;
+
+      .intro__wrapper {
+        padding-right: 50%;
+      }
     }
   }
 }
