--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -1,5 +1,5 @@
 .intro {
-  background: url(../img/bg-back-mobile.jpg) no-repeat;
+  background: $pages-text-color url(../img/bg-back-mobile.jpg) no-repeat;
   color: #fff;
 
   &__wrapper {
