--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -46,4 +46,10 @@
       justify-content: space-between;
     }
   }
+
+  @media #{$desktop-width} {
+    &__wrapper {
+      padding: 0 130px;
+    }
+  }
 }
