--- a/sass/blocks/slider.scss
+++ b/sass/blocks/slider.scss
@@ -69,8 +69,8 @@
   }
 
   &--versions-slider {
-    position: relative;
-    padding-top: 400px;
+    // position: relative;
+    // padding-top: 400px;
     background: $pages-color-gray url(../img/bg-triangle-white.svg) 100% 0 no-repeat;
   }
 }
