--- a/sass/blocks/content.scss
+++ b/sass/blocks/content.scss
@@ -1,16 +1,9 @@
-
-
 .logo {
   font-size: 0;
   display: block;
-  margin: 20px 0;
   width: 90px;
   height: 20px;
   background: url(../img/logo-pink-white-mobile.svg) no-repeat;
-
-  &--header {
-    float: left;
-  }
 
   &--extended {
     background: url(../img/logo-pink-blue-mobile.svg) no-repeat;
@@ -152,13 +145,9 @@
 
 .range-controls {
   display: block;
-  padding: 20px;
-
-  &__wrapper {
-    position: relative;
-  }
-
+  position: relative;
   &__scale {
+
     width: 100%;
     height: 2px;
     background-color: $page-color-dark-blue;
@@ -166,8 +155,9 @@
 
   &__toggle {
     position: absolute;
-    top: -6px;
+    top: 0;
     left: 70%;
+    transform: translateY(-50%);
     background-color: $pages-color-gray;
     display: block;
     width: 10px;
@@ -336,8 +326,6 @@
       height: 105px;
     }
   }
-
-
 }
 
 .research {
@@ -365,6 +353,10 @@
     &__link {
       color: $pages-text-color-pink;
     }
+  }
+
+  @media #{$desktop-width} {
+    background-color: $pages-color-gray;
   }
 }
 
@@ -422,6 +414,13 @@
       flex-wrap: wrap;
       justify-content: space-between;
       align-items: stretch;
+      // align-content: stretch;
+    }
+  }
+
+  @media #{$desktop-width} {
+    &__wrapper {
+      padding: 0 130px;
       // align-content: stretch;
     }
   }
