--- a/sass/blocks/post-photo.scss
+++ b/sass/blocks/post-photo.scss
@@ -1,9 +1,16 @@
 .post-photo {
-  background-color: $pages-color-gray;
-
   &__wrapper {
     padding: 0 20px;
   }
+
+  &__left-container {
+    background-color: $pages-color-gray;
+  }
+
+  &__right-container {
+    background-color: $pages-color-gray;
+  }
+
 
   &__title {
     @include pages-font-settings;
@@ -15,7 +22,7 @@
   }
 
   &__buttons {
-    padding: 40px 0 30px 0;
+    padding: 0;
   }
 
   &__filter {
@@ -26,11 +33,7 @@
     display: flex;
     justify-content: space-between;
     width: 220px;
-    margin: 40px auto 20px auto;
-  }
-
-  &__image {
-    background-color: #000;
+    margin: 40px auto 0 auto;
   }
 
   &__filter-button {
@@ -52,6 +55,54 @@
     }
   }
 
+  &__filter-controller {
+    position: relative;
+    padding: 20px;
+    padding-left: 55px;
+    border-bottom: 1px solid $cansel-btn-color-dark-gray;
+
+    &::after {
+      border: 1px solid #000;
+      content: '';
+      position: absolute;
+      width: 35px;
+      height: 35px;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    &--filter1::after {
+      background: url(../img/icon-editor-crop.svg) no-repeat 50% 50%;
+      background-size: 25px 25px;
+    }
+
+    &--filter2::after {
+      background: url(../img/icon-editor-fill.svg) no-repeat 50% 50%;
+      background-size: 25px 25px;
+    }
+
+    &--filter3::after {
+      background: url(../img/icon-editor-contrast.svg) no-repeat 50% 50%;
+      background-size: 16px 16px;
+    }
+  }
+
+  @media #{$mobile-width-only} {
+    background-color: $pages-color-gray;
+    &__filter-controller {
+      padding-left: 20px;
+
+      &:not(.post-photo__filter-controller--active) {
+        display: none;
+      }
+
+      &::after {
+        display: none;
+      }
+    }
+  }
+
   @media #{$tablet-width} {
     &__wrapper {
       @include content-wrapper-tablet;
@@ -60,10 +111,13 @@
     }
 
     &__right-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
       border: 1px solid #000;
       box-sizing: border-box;
       width: 50%;
-      padding-left: 10px;
     }
 
     &__left-container {
@@ -71,7 +125,27 @@
       border: 1px solid #000;
       box-sizing: border-box;
       width: 50%;
-      padding-right: 10px;
+    }
+
+    &__filter-buttons {
+      display: none;
+    }
+
+  }
+
+  @media #{$desktop-width} {
+    &__wrapper {
+      padding: 0 130px;
+    }
+
+    &__buttons {
+      display: flex;
+      justify-content: space-between;
+
+      .transparent-btn {
+        box-sizing: border-box;
+        width: 185px;
+      }
     }
   }
 }
