--- a/sass/blocks/versions-table.scss
+++ b/sass/blocks/versions-table.scss
@@ -1,53 +1,8 @@
 .versions-table {
+}
   // position: absolute;
   // left: 25px;
   // top: 80px;
-
-  th {
-    display: block;
-    width: 100%;
-  }
-
-  tr {
-    display: flex;
-    box-sizing: border-box;
-    width: 100%;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  td {
-    display: block;
-    width: 100%;
-  }
-
-  th:nth-child(1),
-  td:nth-child(1){
-    order: 0;
-  }
-
-  th:nth-child(2),
-  td:nth-child(2){
-    order: 10;
-  }
-
-  th:nth-child(3),
-  td:nth-child(3){
-    order: 20;
-  }
-
-  th:nth-child(4),
-  td:nth-child(4){
-    order: 30;
-  }
-
-  tbody {
-    display: block;
-    width: 500px;
-    // margin: 0;
-    // padding: 0;
-   }
-
 
   // &__header-cell {
   //   color: white;
@@ -69,30 +24,74 @@
   //   background-color: white;
   //   border: 2px solid $pages-color-dark-gray;
   //   padding: 15px 20px;
-
-  //   &:nth-child(2) {
-  //     display: none;
-  //   }
   // }
-}
 
-#versions-slider-btn-1:checked ~ table tbody tr {
 
-    border: #000;
 
-}
+  // th {
+  //   display: block;
+  //   width: 100%;
+  // }
 
-#versions-slider-btn-1:checked ~ table tbody th:nth-child(1),
-#versions-slider-btn-1:checked ~ table tbody td:nth-child(1){
-  order: 5;
-}
+  // tr {
+  //   display: flex;
+  //   box-sizing: border-box;
+  //   width: 100%;
+  //   flex-direction: row;
+  //   justify-content: space-between;
+  // }
 
-#versions-slider-btn-2:checked ~ table tbody th:nth-child(1),
-#versions-slider-btn-2:checked ~ table tbody td:nth-child(1){
-  order: 15;
-}
+  // td {
+  //   display: block;
+  //   width: 100%;
+  // }
 
-#versions-slider-btn-3:checked ~ table tbody th:nth-child(1),
-#versions-slider-btn-3:checked ~ table tbody td:nth-child(1){
-  order: 25;
-}
+  // th:nth-child(1),
+  // td:nth-child(1){
+  //   order: 0;
+  // }
+
+  // th:nth-child(2),
+  // td:nth-child(2){
+  //   order: 10;
+  // }
+
+  // th:nth-child(3),
+  // td:nth-child(3){
+  //   order: 20;
+  // }
+
+  // th:nth-child(4),
+  // td:nth-child(4){
+  //   order: 30;
+  // }
+
+  // tbody {
+  //   display: block;
+  //   width: 500px;
+  //   // margin: 0;
+  //   // padding: 0;
+  //  }
+
+//}
+
+// #versions-slider-btn-1:checked ~ table tbody tr {
+
+//     border: #000;
+
+// }
+
+// #versions-slider-btn-1:checked ~ table tbody th:nth-child(1),
+// #versions-slider-btn-1:checked ~ table tbody td:nth-child(1){
+//   order: 5;
+// }
+
+// #versions-slider-btn-2:checked ~ table tbody th:nth-child(1),
+// #versions-slider-btn-2:checked ~ table tbody td:nth-child(1){
+//   order: 15;
+// }
+
+// #versions-slider-btn-3:checked ~ table tbody th:nth-child(1),
+// #versions-slider-btn-3:checked ~ table tbody td:nth-child(1){
+//   order: 25;
+// }
