--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,19 +1,37 @@
+// @font-face {
+//   font-family: "Open Sans";
+//   font-style: normal;
+//   font-weight: 400;
+//   src:
+//       local("Open Sans"),
+//       local("Open-Sans"),
+//       url("../fonts/opensans.woff") format("woff");
+// }
+
+// @font-face {
+//   font-family: "Open Sans";
+//   font-style: normal;
+//   font-weight: 700;
+//   src:
+//       local("Open Sans"),
+//       local("Open-Sans"),
+//       url("../fonts/opensansbold.woff") format("woff");
+// }
+
 @font-face {
+  font-weight: 400;
   font-family: "Open Sans";
   font-style: normal;
-  font-weight: 400;
-  src:
-      local("Open Sans"),
-      local("Open-Sans"),
-      url("../fonts/opensans.woff") format("woff");
+
+  src: url("../fonts/opensans.woff2") format("woff2"),
+  url("../fonts/opensans.woff") format("woff");
 }
 
 @font-face {
+  font-weight: 700;
   font-family: "Open Sans";
   font-style: normal;
-  font-weight: 700;
-  src:
-      local("Open Sans"),
-      local("Open-Sans"),
-      url("../fonts/opensansbold.woff") format("woff");
+
+  src: url("../fonts/opensansbold.woff2") format("woff2"),
+  url("../fonts/opensansbold.woff") format("woff");
 }
