--- a/sass/blocks/slider.scss
+++ b/sass/blocks/slider.scss
@@ -1,70 +1,102 @@
 .slider {
-  padding: 30px 0;
+  padding-top: 41px;
+  padding-bottom: 42px;
 
   &__wrapper {
-    padding: 0 20px;
-  }
-
-  &__slides {
-
-
+    @include content-wrapper-mobile;
   }
 
   &__slide {
-
-    &:nth-child(n+2) {
-      display: none;
-    }
+    display: none;
   }
 
   &__switcher {
-    display: block;
-    width: 100px;
+    display: flex;
+    justify-content: space-between;
+    width: 62px;
+    height: 12px;
     margin: 0 auto;
-    font-size: 0;
-    text-align: center;
   }
 
   &__switcher-label {
-    @include inline-block();
+    display: block;
     position: relative;
-    padding-right: 12px;
     width: 12px;
     height: 12px;
 
-    &:before {
+    &:before,
+    &:after {
       position: absolute;
       content: '';
-      left: 0;
-      top: 0;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
       width: 12px;
       height: 12px;
       background-color: $page-color-dark-blue;
       border-radius: 50%;
+    }
+
+    &:before {
       display: none;
     }
 
     &:after {
-      position: absolute;
-      content: '';
-      left: 3px;
-      top: 3px;
       width: 6px;
       height: 6px;
       background-color: $cansel-btn-color-darkest-gray;
-      border-radius: 50%;
     }
   }
 
   &__switcher-input{
     display: none;
 
-    &:checked + .slider__switcher-label::before {
-      display: block;
+    &--first:checked {
+      & ~ .slider__switcher .slider__switcher-label--first {
+        &::before {
+          display: block;
+        }
+
+        &::after {
+          background-color: white;
+        }
+      }
+
+      & ~ .slider__slide:nth-of-type(1) {
+        display: block;
+      }
     }
 
-    &:checked + .slider__switcher-label::after {
-      background-color: white;
+    &--second:checked {
+      & ~ .slider__switcher .slider__switcher-label--second {
+        &::before {
+          display: block;
+        }
+
+        &::after {
+          background-color: white;
+        }
+      }
+
+      & ~ .slider__slide:nth-of-type(2) {
+        display: block;
+      }
+    }
+
+    &--third:checked {
+      & ~ .slider__switcher .slider__switcher-label--third {
+        &::before {
+          display: block;
+        }
+
+        &::after {
+          background-color: white;
+        }
+      }
+
+      & ~ .slider__slide:nth-of-type(3) {
+        display: block;
+      }
     }
   }
 
