--- a/sass/blocks/contacts-block.scss
+++ b/sass/blocks/contacts-block.scss
@@ -1,19 +1,20 @@
 .contacts-block {
   text-align: center;
+  font-weight: 300;
+  padding-top: 18px;
 
   &__wrapper {
-    padding: 0 20px;
+    @include content-wrapper-mobile;
   }
 
   &__header {
     font-size: 24px;
-    width: 250px;
-    margin: 0 auto;
+    line-height: 29px;
+    margin: 0 auto 31px auto;
   }
 
-  &__contact {
-    padding-bottom: 30px;
-    width: 300px;
+  &__contacts {
+    padding-bottom: 18px;
   }
 
   &__contact-title {
@@ -29,27 +30,86 @@
     color: $form-label-color-pink;
   }
 
+  &__contact {
+    padding-bottom: 18px;
+
+    // &:nth-of-type(1) {
+    //   padding-top: 7px;
+
+    //   .contacts-block__contact-address {
+    //     margin-top: -2px;
+    //   }
+    // }
+
+    // &:nth-of-type(2) {
+    //   padding-top: 17px;
+    // }
+  }
+
   @media #{$tablet-width} {
+    padding-top: 6px;
+
+    &__wrapper {
+      @include content-wrapper-tablet;
+      padding: 0;
+    }
 
     &__contacts {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-around;
+      min-height: 180px;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
     }
 
     &__header {
       font-size: 40px;
-      line-height: 40px;
+      line-height: 48px;
       width: 400px;
+      margin: 0 auto;
+    }
+
+    &__contact {
+      width: 320px;
+      padding-bottom: 45px;
+
+      &:last-of-type {
+        width: 250px;
+        padding-bottom: 7px;
+      }
+    }
+
+    &__contact-address {
+      padding: 0;
     }
   }
 
   @media #{$desktop-width} {
+    &__wrapper {
+      @include content-wrapper-desktop;
+    }
+
     &__header {
       font-size: 50px;
-      line-height: 50px;
-      width: 500px;
+      line-height: 60px;
+      // width: 500px;
     }
+
+    &__contact {
+      width: 300px;
+
+      &:last-of-type {
+        width: 300px;
+      }
+    }
+
+    &__contacts {
+
+      align-items: flex-start;
+      justify-content: space-between;
+    }
+
 
     &__contact:nth-child(1) {
       order: 1;
