--- a/sass/blocks/slider.scss
+++ b/sass/blocks/slider.scss
@@ -1,5 +1,5 @@
 .slider {
-  padding-top: 41px;
+  padding-top: 42px;
   padding-bottom: 42px;
 
   &__wrapper {
@@ -48,7 +48,7 @@
     }
   }
 
-  &__switcher-input{
+  &__switcher-input {
     display: none;
 
     &--first:checked {
@@ -100,9 +100,83 @@
     }
   }
 
+  &__toggle {
+    display: none;
+  }
+
   &--versions-slider {
     // position: relative;
     // padding-top: 400px;
     background: $pages-color-gray url(../img/bg-triangle-white.svg) 100% 0 no-repeat;
+  }
+
+  @media #{$tablet-width} {
+    padding-bottom: 20px;
+
+    &__wrapper {
+      @include content-wrapper-tablet;
+    }
+  }
+
+  @media #{$desktop-width} {
+    padding-top: 60px;
+    &__wrapper {
+      @include content-wrapper-desktop;
+    }
+
+    &__slides {
+      position: relative;
+      padding: 0 120px;
+    }
+
+    &__switcher {
+      display: none;
+    }
+
+    &__toggle {
+      display: block;
+      @include reset-button-style;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%) translateY(6px);
+      height: 100%;
+      width: 80px;
+      font-size: 0;
+      outline: none;
+      cursor: pointer;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        width: 29px;
+        height: 29px;
+        transform-origin: 50% 50%;
+        // background-image: url("../img/logo-pink-blue-mobile.svg");
+        border: 2px solid #bec2c7;
+      }
+
+      &--prev {
+        left: 0;
+
+        &::before {
+          left: 0;
+          transform: translate(5px, -50%) rotate(-45deg);
+          border-bottom: none;
+          border-right: none;
+        }
+      }
+
+      &--next {
+        right: 0;
+
+        &::before {
+          right: 0;
+          transform: translate(-5px, -50%) rotate(-45deg);
+          border-left: none;
+          border-top: none;
+        }
+      }
+    }
   }
 }
