--- a/sass/blocks/content-description.scss
+++ b/sass/blocks/content-description.scss
@@ -1,11 +1,11 @@
 .content-description {
 
   &__wrapper {
-    padding: 0 20px;
+    @include content-wrapper-mobile;
   }
 
   &__text {
-    padding: 40px 0 20px 0;
+    padding: 31px 0 20px 0;
     text-align: center;
 
     span {
@@ -20,6 +20,7 @@
 
     &__text {
       font-size: 18px;
+      padding: 74px 60px 17px 60px;
 
       span {
         display: block;
