--- a/sass/blocks/content.scss
+++ b/sass/blocks/content.scss
@@ -1,20 +1,33 @@
+.page-main {
+  position: relative;
+  z-index: 0;
+}
+
 .logo {
   font-size: 0;
   display: block;
-  width: 90px;
-  height: 20px;
+  width: 76px;
+  height: 24px;
   background: url(../img/logo-pink-white-mobile.svg) no-repeat;
+  background-size: 100% 100%;
 
   &--extended {
     background: url(../img/logo-pink-blue-mobile.svg) no-repeat;
-    width: 150px;
-    height: 45px;
+    background-size: 147px 40px;
+    width: 147px;
+    height: 40px;
+  }
+
+  @media #{$tablet-width} {
+    background: url(../img/logo-pink-blue-mobile.svg) no-repeat;
+    background-size: 147px 40px;
+    width: 147px;
+    height: 40px;
   }
 }
 
 .social-links {
-  width: 200px;
-  margin: 20px 0;
+  width: 177px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -22,14 +35,14 @@
   &__btn {
     box-sizing: border-box;
     font-size: 0;
-    width: 50px;
-    height: 50px;
+    width: 51px;
+    height: 51px;
     border: 3px solid $form-field-color-gray;
     border-radius: 50%;
-    margin: 6px;
 
     &--twitter {
       background: url(../img/icon-twitter.svg) no-repeat 50% 50%;
+
     }
 
     &--facebook {
@@ -56,6 +69,7 @@
 }
 
 .popup {
+  display: none;
   font-size: 14px;
   line-height: 24px;
   text-align: center;
