--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -1,19 +1,20 @@
 .intro {
   background: $pages-text-color url(../img/bg-back-mobile.jpg) no-repeat;
   color: #fff;
+  padding-top: 96px;
+  padding-bottom: 54px;
 
   &__wrapper {
-    padding: 0 20px;
+    @include content-wrapper-mobile;
   }
 
   &__text {
     display: block;
     margin: 0;
-    padding: 100px 20px 50px 20px;
     text-align: center;
     font-size: 24px;
-    line-height: 26px;
-    font-weight: 400;
+    line-height: 29px;
+    font-weight: 300;
   }
 
   &--main {
@@ -33,6 +34,8 @@
   }
 
   @media #{$tablet-width} {
+    padding-top: 180px;
+    padding-bottom: 80px;
 
     &__wrapper {
       @include content-wrapper-tablet;
@@ -42,8 +45,8 @@
       margin: 0;
       font-size: 50px;
       line-height: 60px;
-      padding: 120px 20px 100px 20px;
-      font-weight: 400;
+      font-weight: 300;
+      padding: 0 30px;
     }
 
     &--main {
