--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -1,28 +1,28 @@
 .page-footer {
+
   &__wrapper {
-    padding: 0 20px;
+    @include content-wrapper-mobile;
   }
 
   &__container {
+    padding: 45px 0;
+    min-height: 204px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-  }
-
-  &__copyright{
-    margin: 20px 0;
   }
 
   &__copyright-link {
     @include reset-link-style;
-    position: relative;
     display: block;
     text-align: left;
     color: $pages-text-color;
     padding-right: 40px;
     width: 90px;
-    min-height: 40px;
+    min-height: 34px;
     background: url(../img/logo-htmlacademy.svg) no-repeat 100% 0;
+    background-size: 27px 34px;
 
     span {
       display: none;
