Закончил страницу формы(планшет)

--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -174,48 +174,8 @@
     }
   }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   @media #{$tablet-width} {
+    padding-bottom: 43px;
 
     &__wrapper {
       @include content-wrapper-tablet;
@@ -226,15 +186,6 @@
     //   flex-direction: column;
     // }
 
-    // &__send-container {
-    //   display: flex;
-    //   align-items: baseline;
-    // }
-
-    // &__hint {
-    //   text-align: right;
-    //   padding: 0;
-    // }
 
     &__group-title {
 
@@ -303,6 +254,15 @@
 
       &--achievements-group {
         order: 3;
+        padding-bottom: 67px;
+
+        .form__label {
+          padding-left: 60px;
+        }
+
+        .form__fields {
+          padding-bottom: 5px;
+        }
       }
 
       &--version-group {
@@ -325,10 +285,22 @@
 
       &--emotions-group {
         order: 4;
+
+        .form__border-wrapper {
+          padding-top: 43px;
+          padding-bottom: 35px;
+        }
+
+        .form__entry-field--textarea {
+          .form__field {
+            height: 193px;
+          }
+        }
       }
 
       &--contact-group {
         order: 2;
+        padding-bottom: 67px;
 
         .form__border-wrapper {
           padding-top: 38px;
@@ -350,6 +322,17 @@
           margin-bottom: 0;
         }
       }
+    }
+
+    &__send-container {
+      padding-top: 37px;
+      flex-direction: row;
+      align-items: baseline;
+    }
+
+    &__hint {
+      text-align: right;
+      padding: 0;
     }
   }
 
