--- a/sass/blocks/content.scss
+++ b/sass/blocks/content.scss
@@ -53,6 +53,11 @@
       background: url(../img/icon-youtube.svg) no-repeat 50% 50%;
     }
   }
+
+  @media #{$tablet-width} {
+    padding-top: 15px;
+    padding-right: 16px;
+  }
 }
 
 .button {
@@ -66,6 +71,12 @@
   width: 100%;
   height: 63px;
   border-radius: 2px;
+
+  @media #{$tablet-width} {
+    &--send-form {
+      width: 94%;
+    }
+  }
 }
 
 .popup {
