--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -337,8 +337,10 @@
   }
 
   @media #{$desktop-width} {
+    padding-bottom: 26px;
+
     &__wrapper {
-      padding: 0 130px;
+      @include content-wrapper-desktop;
     }
 
     &__group-container {
@@ -346,10 +348,16 @@
       flex-wrap: wrap;
     }
 
+    &__send-container {
+      padding-top: 35px;
+    }
+
     &__group {
       width: 100%;
 
       &--name-group {
+        margin-top: 14px;
+        padding-bottom: 0;
         width: 50%;
 
         .form__wrapper {
@@ -358,16 +366,22 @@
       }
 
       &--version-group {
+        margin-top: 45px;
+        padding-bottom: 0;
         width: 50%;
 
         .form__wrapper {
           padding-left: 35px;
         }
+
+        .form__border-wrapper {
+          padding: 53px 74px 0 74px;
+        }
       }
 
       &--contact-group {
+        margin-top: 23px;
         .form__fields {
-          display: flex;
           flex-direction: row;
           justify-content: space-between;
         }
@@ -376,18 +390,42 @@
           width: 375px;
         }
 
+        .form__border-wrapper {
+          padding: 35px 58px 0 58px;
+          // padding: 50px 58px 0 58px;
+        }
+
+        .form__entry-field {
+          margin-bottom: 8px;
+        }
+      }
+
+      &--emotions-group {
+        .form__border-wrapper {
+          padding: 40px 58px 27px 58px;
+        }
+
+        .form__entry-field--textarea {
+          .form__field {
+            height: 128px;
+          }
+        }
       }
 
       &--achievements-group {
 
         .form__fields {
-          display: flex;
+          flex-direction: row;
           flex-wrap: wrap;
-          justify-content: flex-end;
+          justify-content: space-between;
         }
 
         .form__entry-field {
-          width: 270px;
+          width: 260px;
+        }
+
+        .form__border-wrapper {
+          padding: 50px 0 7px 58px;
         }
 
         .form__entry-field:nth-child(1) {
@@ -400,10 +438,12 @@
 
         .form__entry-field:nth-child(3) {
           order: 2;
+          padding-left: 10px;
         }
 
         .form__entry-field:nth-child(4) {
           order: 5;
+          padding-left: 10px;
         }
 
         .form__entry-field:nth-child(5) {
